jenkins/jenkins-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
spec:
  revisionHistoryLimit: 2
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
        version: "2.63"
      annotations:
        pod.beta.kubernetes.io/init-containers: '[
                {
                  "name": "jenkins-volume-permissions",
                  "image": "alpine",
                  "imagePullPolicy": "IfNotPresent",
                  "command": ["chown", "1000:1000", "/var/jenkins_home"],
                  "volumeMounts": [
                    {
                      "name": "jenkins-home",
                      "mountPath": "/var/jenkins_home"
                    }
                  ]
                },
                {
                  "name": "plugin-config",
                  "image": "jenkinsci/jenkins:2.63-alpine",
                  "imagePullPolicy": "IfNotPresent",
                  "command": ["/usr/local/bin/install-plugins.sh"],
                  "args": [
                    "github:latest",
                    "github-oauth:latest",
                    "workflow-aggregator:latest",
                    "kubernetes:latest",
                    "kubernetes-pipeline-steps",
                    "greenballs:latest",
                    "buildtriggerbadge:latest",
                    "timestamper:latest",
                    "global-build-stats:latest",
                    "pipeline-model-definition:latest",
                    "pipeline-utility-steps:latest",
                    "metrics:latest"
                  ],
                  "volumeMounts": [
                    {
                      "name": "jenkins-plugins",
                      "mountPath": "/usr/share/jenkins/ref"
                    }
                  ]
                }
        ]'
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      containers:
        - name: jenkins
          image: jenkinsci/jenkins:2.63-alpine
          imagePullPolicy: Always
          ports:
            - name: http-port
              containerPort: 8080
            - name: slave-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: jenkins-plugins
              mountPath: /usr/share/jenkins/ref
          livenessProbe:
            httpGet:
              path: /metrics/2CLALUZKREff_Nc1HTwqvE9AxDysudQckaHw4ayDjCGHZj-nqh0poRONCRQPr3Jl/healthcheck
              port: 8080
            initialDelaySeconds: 90
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /metrics/2CLALUZKREff_Nc1HTwqvE9AxDysudQckaHw4ayDjCGHZj-nqh0poRONCRQPr3Jl/healthcheck
              port: 8080
            initialDelaySeconds: 90
            timeoutSeconds: 5
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home
        - name: jenkins-plugins
          emptyDir: {}
