jenkins/jenkins-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: jenkins
    ingress.kubernetes.io/ssl-redirect: false
spec:
  rules:
    - host: jenkins.determan.cloud
      http:
        paths: 
          - path: /
            backend:
              serviceName: jenkins
              servicePort: 80
